--- a/Projeto Gerson AV1/package.json
+++ b/Projeto Gerson AV1/package.json
@@ -2,8 +2,9 @@
   "name": "projeto-gerson-av1",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "commonjs",
   "directories": {
-    "test": "tests"
+    "test": "test"
   },
   "scripts": {
     "build": "tsc",
@@ -11,8 +12,9 @@
     "dev": "ts-node src/index.ts",
     "clean": "rm -rf dist",
     "prestart": "npm run build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test:peca": "node --loader ts-node/esm test/teste-peca.ts"
   },
+  
   "keywords": [],
   "author": "",
   "license": "ISC",
