--- a/Projeto Gerson AV1/tsconfig.json
+++ b/Projeto Gerson AV1/tsconfig.json
@@ -1,18 +1,16 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "target": "es5",
     "module": "commonjs",
-    "outDir": "./dist",
-    "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true,
-    "declaration": true,
-    "declarationMap": true,
-    "sourceMap": true
+    "outDir": "out/",
+    "noImplicitAny": false,
+    "rootDir": "src/"
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "data"]
+  "include": [
+    "src/*"
+  ],
 }
